<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_activity_login_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/til_activity_login_pwd_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_activitiy_login_submit"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/edt_activity_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email address"
            android:background="@drawable/edt_underline"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_activity_login_pwd_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/til_activity_login_email_layout"
        app:layout_constraintBottom_toTopOf="@+id/tv_activity_login_enroll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_activitiy_login_submit"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/edt_activity_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password"
            android:inputType="textPassword"
            android:background="@drawable/edt_underline"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_activitiy_login_submit"
        android:layout_width="100dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/til_activity_login_email_layout"
        app:layout_constraintBottom_toBottomOf="@+id/til_activity_login_pwd_layout"
        app:layout_constraintLeft_toRightOf="@+id/til_activity_login_email_layout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#2d2d2d"
        android:textColor="#ffffff"
        style="?android:attr/borderlessButtonStyle"
        android:text="로그인"
        />

    <TextView
        android:id="@+id/tv_activity_login_enroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/til_activity_login_pwd_layout"
        app:layout_constraintBottom_toTopOf="@+id/facebook_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="회원가입"
        />

    <Button
        android:id="@+id/facebook_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_login_enroll"
        app:layout_constraintBottom_toTopOf="@+id/google_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#3b5998"
        android:text="페이스북으로 시작하기"
        android:textColor="#FFFFFF"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#dd4b39"
        android:text="구글로 시작하기"
        android:textColor="#FFFFFF"
        style="@style/Widget.AppCompat.Button.Colored"
        />



</android.support.constraint.ConstraintLayout>
