<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_activity_sign_up_profile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toTopOf="@id/til_activity_sign_up_nickname_layout"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_activity_sign_up_nickname_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/til_activity_sign_up_email_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/edt_activity_sign_up_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="닉네임"
            android:background="@drawable/edt_underline"
            >
            <requestFocus/>
        </EditText>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_activity_sign_up_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/til_activity_sign_up_nickname_layout"
        app:layout_constraintBottom_toTopOf="@+id/til_activity_sign_up_password_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/edt_activity_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:background="@drawable/edt_underline"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_activity_sign_up_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/til_activity_sign_up_email_layout"
        app:layout_constraintBottom_toTopOf="@+id/til_activity_sign_up_password_check_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <EditText
            android:id="@+id/edt_activity_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="비밀번호"
            android:inputType="textPassword"
            android:background="@drawable/edt_underline"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_activity_sign_up_password_check_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/til_activity_sign_up_password_layout"
        app:layout_constraintBottom_toTopOf="@+id/spinner_activity_sign_up_sex"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <EditText
            android:id="@+id/edt_activity_sign_up_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="비밀번호 확인"
            android:inputType="textPassword"
            android:background="@drawable/edt_underline"
            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_activity_sign_up_sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/til_activity_sign_up_password_check_layout"
        app:layout_constraintBottom_toTopOf="@+id/btn_activity_sign_up_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:entries="@array/sex"
        />

    <Button
        android:id="@+id/btn_activity_sign_up_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/spinner_activity_sign_up_sex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/view_edge"
        android:backgroundTint="#2d2d2d"
        android:textColor="#ffffff"
        style="?android:attr/borderlessButtonStyle"
        android:visibility="visible"
        android:textSize="14dp"
        android:textStyle="bold"
        android:text="등   록"/>

    <Button
        android:id="@+id/btn_activity_modify_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/til_activity_sign_up_password_check_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/view_edge"
        android:backgroundTint="#2d2d2d"
        android:textColor="#ffffff"
        style="?android:attr/borderlessButtonStyle"
        android:visibility="gone"
        android:textSize="14dp"
        android:textStyle="bold"
        android:text="수   정" />

</android.support.constraint.ConstraintLayout>
