<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="sex">
        <item >남자</item>
        <item >여자</item>
    </string-array>

    <string-array name="type">
        <item>공지</item>
        <item>이벤트</item>
        <item>업데이트</item>
    </string-array>
</resources>
